@@ -49,11 +49,12 @@
 
     <ol>
       <li>
-        Allow 10 seconds to receive the request including the headers and
-        30 seconds for receiving the request body:
+        Allow for 5 seconds to complete the TLS handshake, 10 seconds to
+        receive the request headers and 30 seconds for receiving the
+        request body:
 
         <highlight language="config">
-          RequestReadTimeout header=10 body=30
+          RequestReadTimeout handshake=5 header=10 body=30
         </highlight>
       </li>
 
@@ -70,10 +71,10 @@
       </li>
 
       <li>
-        Allow at least 10 seconds to receive the request including the headers.
+        Allow at least 10 seconds to receive the request headers.
         If the client sends data, increase the timeout by 1 second for every
         500 bytes received. But do not allow more than 30 seconds for the
-        request including the headers:
+        request headers:
 
         <highlight language="config">
           RequestReadTimeout header=10-30,MinRate=500
@@ -95,65 +96,70 @@
 
 <directivesynopsis>
 <name>RequestReadTimeout</name>
-<description>Set timeout values for receiving request headers and body from client.
+<description>Set timeout values for completing the TLS handshake, receiving
+the request headers and/or body from client.
 </description>
 <syntax>RequestReadTimeout
+[handshake=<var>timeout</var>[-<var>maxtimeout</var>][,MinRate=<var>rate</var>]
 [header=<var>timeout</var>[-<var>maxtimeout</var>][,MinRate=<var>rate</var>]
 [body=<var>timeout</var>[-<var>maxtimeout</var>][,MinRate=<var>rate</var>]
 </syntax>
-<default>RequestReadTimeout header=20-40,MinRate=500 body=20,MinRate=500</default>
+<default>RequestReadTimeout handshake=0 header=20-40,MinRate=500 body=20,MinRate=500</default>
 <contextlist><context>server config</context><context>virtual host</context>
 </contextlist>
 <compatibility>Available in version 2.2.15 and later; defaulted to disabled in
-version 2.3.14 and earlier.</compatibility>
+version 2.3.14 and earlier. The <code>handshake</code> stage is available since
+version 2.4.29.
+</compatibility>
 
 <usage>
-    <p>This directive can set various timeouts for receiving the request headers
-    and the request body from the client. If the client fails to send headers or
-    body within the configured time, a <code>408 REQUEST TIME OUT</code> error
-    is sent.</p>
+    <p>This directive can set various timeouts for completing the TLS handshake,
+    receiving the request headers and/or the request body from the client.
+    If the client fails to complete each of these stages within the configured
+    time, a <code>408 REQUEST TIME OUT</code> error is sent.</p>
 
-    <p>For SSL virtual hosts, the header timeout values include the time needed
-    to do the initial SSL handshake.  If the user's browser is configured to
+    <p>For SSL virtual hosts, the <code>handshake</code> timeout values is the time
+    needed to do the initial SSL handshake.  If the user's browser is configured to
     query certificate revocation lists and the CRL server is not reachable, the
     initial SSL handshake may take a significant time until the browser gives up
-    waiting for the CRL.  Therefore the header timeout values should not be set
-    to very low values for SSL virtual hosts.
+    waiting for the CRL.  Therefore the <code>handshake</code> timeout should take
+    this possible overhead into consideration for SSL virtual hosts (if necessary).
     The body timeout values include the time needed for SSL renegotiation
     (if necessary).</p>
 
     <p>When an <directive module="core">AcceptFilter</directive> is in use
     (usually the case on Linux and FreeBSD), the socket is not sent to the
     server process before at least one byte (or the whole request for
-    <code>httpready</code>) is received. The header timeout configured with
-    <directive>RequestReadTimeout</directive> is only effective after the server process has
-    received the socket.</p>
+    <code>httpready</code>) is received. The handshake and header timeouts
+    configured with <directive>RequestReadTimeout</directive> are only effective
+    after the server process has received the socket.</p>
 
-    <p>For each of the two timeout types (header or body), there are three ways
-    to specify the timeout:
+    <p>For each of the three timeout stages (handshake, header or body), there are
+    three ways to specify the timeout:
     </p>
 
     <ul>
 
     <li><strong>Fixed timeout value</strong>:<br />
 
-    <example><var>type</var>=<var>timeout</var></example>
+    <example><var>stage</var>=<var>timeout</var></example>
 
-    <p>The time in seconds allowed for reading all of the request headers or
-    body, respectively. A value of 0 means no limit.</p>
+    <p>The time in seconds allowed for completing the whole stage (handshaking,
+    reading all of the request headers or body). A value of 0 means no limit.</p>
     </li>
 
     <li><strong>Disable module for a vhost</strong>:<br />
 
-    <example>header=0 body=0</example>
+    <example>handshake=0 header=0 body=0</example>
 
-    <p>This disables <module>mod_reqtimeout</module> completely.</p>
+    <p>This disables <module>mod_reqtimeout</module> completely (note that
+    <code>handshake=0</code> is the default already and could be omitted).</p>
     </li>
 
     <li><strong>Timeout value that is increased when data is
     received</strong>:<br />
     <example>
-    <var>type</var>=<var>timeout</var>,MinRate=<var>data_rate</var>
+    <var>stage</var>=<var>timeout</var>,MinRate=<var>data_rate</var>
     </example>
 
     <p>Same as above, but whenever data is received, the timeout value is
@@ -164,7 +170,7 @@ version 2.3.14 and earlier.</compatibility>
     <li><strong>Timeout value that is increased when data is received, with an
     upper bound</strong>:<br />
     <example>
-    <var>type</var>=<var>timeout</var>-<var>maxtimeout</var>,MinRate=<var>data_rate</var>
+    <var>stage</var>=<var>timeout</var>-<var>maxtimeout</var>,MinRate=<var>data_rate</var>
     </example>
 
     <p>Same as above, but the timeout will not be increased above the second
